--- a/table.html
+++ b/table.html
@@ -130,7 +130,7 @@
                             </li>
                         </ul>
                         <div class="pull-right text-right">
-                            <%- locals.loggedInAs %>
+                            <!-- <%- locals.loggedInAs %> -->
                             <h2 class="wb-inv">Logout</h2>
                             <button type="button" class="btn btn-default" id="logoutButton">LOGOUT</button>
                             <!-- <button type="button" aria-haspopup="true" id="logoutButton"><span class="wb-inv">Logout
@@ -167,7 +167,41 @@
 
         <!-- content -->
         
-        <%- locals.tableData %>
+        <table id="dataTable" class="display" style="width:100%" table class="wb-tables table table-striped table-hover" data-wb-tables='{ "ordering" : false }'>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Extn.</th>
+                    <th>Start date</th>
+                    <th>Salary</th>
+                </tr>
+            </thead>
+            
+            <tfoot>
+                <tr>
+                    <th>Name</th>
+                    <th>Position</th>
+                    <th>Office</th>
+                    <th>Extn.</th>
+                    <th>Start date</th>
+                    <th>Salary</th>
+                </tr>
+            </tfoot>
+        </table>
+
+        <!-- <select multiple="multiple" class="form-control" id="select">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+            <option>4</option>
+            <option>5</option>
+        </select>
+
+        <button type="button" class="btn btn-primary" id="logout">Logout</button>
+
+        <button type="submit" id="submit" class="btn btn-primary btn-small" name="wb-srch-sub">Submit</button> -->
 
 
         <!-- Main content footer starts -->
@@ -189,7 +223,7 @@
                 <div class="col-xs-12">
                     <dl id="wb-dtmd">
                         <dt>Date modified:</dt>
-                        <dd><time property="dateModified">2023-06-14</time></dd>
+                        <dd><time property="dateModified">2023-07-06</time></dd>
                     </dl>
                 </div>
             </div>
