front now serves html with proxy, no logout and auth yet

--- a/login-en.html
+++ b/login-en.html
@@ -158,7 +158,7 @@
         <h1 class="mrgn-bttm-lg">Login</h1> <div id="msg"></div>
 
         <div class="wb-frmvld">
-            <form action="/login" method="post" id="form-validation">
+            <form action="http://localhost:4000/login" method="post" id="form-validation">
 
                 <div class="form-group">
                     <div class="form-group">
@@ -174,7 +174,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-default mrgn-rght-md">Log In</button>
-                    <a href="/register">Register now</a>
+                    <a href="/register-en.html">Register now</a>
             </form>
         </div>
 
