--- a/register-en.html
+++ b/register-en.html
@@ -158,7 +158,7 @@
         <h1 class="mrgn-bttm-lg">Register</h1> <div id="msg"></div>
 
         <div class="wb-frmvld">
-            <form action="/register" method="post" id="form-validation">
+            <form action="http://localhost:4000/register" method="post" id="form-validation">
 
                 <div class="form-group">
 
@@ -180,7 +180,7 @@
                     </div>
 
                     <button type="submit" class="btn btn-default mrgn-rght-md" id="registerButton">Register</button>
-                    <a href="/login">Log in</a>
+                    <a href="/login-en.html">Log in</a>
             </form>
         </div>
 
