Edited all pages to redirect based on status code. Now manages own cookies.

--- a/login-en.html
+++ b/login-en.html
@@ -173,7 +173,7 @@
                             autocomplete="family-name" required="required" maxlength="16"/>
                     </div>
 
-                    <button type="submit" class="btn btn-default mrgn-rght-md">Log In</button>
+                    <button id = "submitButton" type="submit" class="btn btn-default mrgn-rght-md">Log In</button>
                     <a href="/register-en.html">Register now</a>
             </form>
         </div>
