nginx proxy in place, custom urls, additional scripts and files cannot load

--- a/login-en.html
+++ b/login-en.html
@@ -158,7 +158,7 @@
         <h1 class="mrgn-bttm-lg">Login</h1> <div id="msg"></div>
 
         <div class="wb-frmvld">
-            <form action="http://localhost:4000/login" method="post" id="form-validation">
+            <form action="http://localhost/api/login" method="post" id="form-validation">
 
                 <div class="form-group">
                     <div class="form-group">
@@ -174,7 +174,7 @@
                     </div>
 
                     <button id = "submitButton" type="submit" class="btn btn-default mrgn-rght-md">Log In</button>
-                    <a href="/register-en.html">Register now</a>
+                    <a href="/register">Register now</a>
             </form>
         </div>
 
@@ -259,7 +259,88 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
     <script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
     <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script>
-    <script src='/scripts/login-en.js'></script>
+    <!-- <script src='/scripts/login-en.js'></script> -->
+
+    <script>
+        
+        // Since authentication is not the focus of the project, this is a band-aid solution:
+        const cookies = document.cookie.split(';');
+        let authorized = false; 
+
+        for (const cookie of cookies) {
+            const [name, value] = cookie.trim().split('=');
+            if (name == 'token') {  // The "token" cookie exists
+                $(document).ready(function () {
+                    $('#dataTable').DataTable({
+                        ajax: 'data/arrays.txt',
+                    });
+                });
+                authorized = true;
+                break;
+            } 
+        }
+
+        if (authorized){         // The "token" cookie does not exist
+            window.location.href = "/table";
+        }
+
+
+
+        let msg = document.getElementById("msg");
+
+        //Check if user just logged out:
+        const urlParams = new URLSearchParams(window.location.search);
+        const myParam = urlParams.get('logout');
+        if (myParam == 'true') {
+            msg.innerHTML = '<section class="alert alert-success"><p>Logged out successfully</p></section>';
+        }
+
+        //Handles server responses:
+        document.addEventListener('DOMContentLoaded', function () {
+            const form = document.getElementById('form-validation');
+            form.addEventListener('submit', async function (event) {
+                event.preventDefault(); // Prevent default form submission
+
+                let error = false;
+                fetch(form.action, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        username: document.getElementById("username").value,
+                        password: document.getElementById("password").value
+                    })
+                })
+                .then((response) => {
+                    if (response.ok) {
+                        console.log("RESPONSE IS OK");
+                        error = false;
+                    } else {
+                        console.log("RESPONSE IS ERR");
+                        error = true;
+                    }
+                    return response.json();
+                })
+                .then((responseJSON) => {
+                    if (error) {
+                        console.log("RESPONSE IS ERR 2");
+                        msg.innerHTML = `<div class="alert alert-danger"><p> ${responseJSON.error} </p></div>`;
+                    } else {
+                        console.log("RESPONSE IS OK 2");
+                        document.cookie = `token=${responseJSON.token}`;
+                        window.location.href = "/table"
+                    }
+                })
+                .catch((error) => {
+                    console.error('Error:', error)
+                })
+            });
+        });
+
+
+    </script>
+
 </body>
 
 </html>
