--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
 		wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>WET-Register-EN</title>
+    <title>WET-Register</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="description" content=" " />
     <link href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
@@ -266,73 +266,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.js"></script>
     <script src="https://wet-boew.github.io/themes-dist/GCWeb/wet-boew/js/wet-boew.min.js"></script>
     <script src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/js/theme.min.js"></script>
-    <!-- <script src='/scripts/register-en.js'></script> -->
-    <script>
+    <script src='scripts/register.js'></script>
 
-        // Since authentication is not the focus of the project, this is a band-aid solution:
-        const cookies = document.cookie.split(';');
-        let authorized = false; 
-
-        for (const cookie of cookies) {
-            const [name, value] = cookie.trim().split('=');
-            if (name == 'token') {  // The "token" cookie exists
-                $(document).ready(function () {
-                    $('#dataTable').DataTable({
-                        ajax: 'data/arrays.txt',
-                    });
-                });
-                authorized = true;
-                break;
-            } 
-        }
-
-        if (authorized){         // The "token" cookie does not exist
-            window.location.href = "/table";
-        }
-
-        let msg = document.getElementById("msg");
-
-        //Handles server responses:
-        document.addEventListener('DOMContentLoaded', function () {
-            const form = document.getElementById('form-validation');
-            form.addEventListener('submit', async function (event) {
-                event.preventDefault(); // Prevent default form submission
-
-                let error = false;
-                fetch(form.action, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        email: document.getElementById("email").value,
-                        username: document.getElementById("username").value,
-                        password: document.getElementById("password").value
-                    })
-                })
-                .then((response) => {
-                    if (response.ok) {
-                        error = false;
-                    } else {
-                        error = true;
-                    }
-                    return response.json();
-                })
-                .then((responseJSON) => {
-                    if (error) {
-                        msg.innerHTML = `<div class="alert alert-danger"><p> ${responseJSON.error} </p></div>`;
-                    } else {
-                        document.cookie = `token=${responseJSON.token}`;
-                        window.location.href = "/table"
-                    }
-                })
-                .catch((error) => {
-                    console.error('Error:', error)
-                })
-            });
-        });
-        
-    </script>
 </body>
 
 </html>
